--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: Pipeline DevSecOps
+name: Custom DevSecOps Pipeline
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   
-  seguridad-y-build:
+  devsecops-scan:
     runs-on: ubuntu-latest
     permissions:
       security-events: write
