--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,4 +1,4 @@
-name: CodeQL Analysis (custom)
+name: CodeQL Analysis
 
 on:
   push:
@@ -11,15 +11,15 @@ permissions:
 
 jobs:
   analyze:
-    name: Analyze code with CodeQL
+    name: Scan with CodeQL
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        language: [javascript]
+        language: [ javascript ]
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Initialize CodeQL
@@ -27,5 +27,5 @@ jobs:
         with:
           languages: ${{ matrix.language }}
 
-      - name: Perform CodeQL Analysis
+      - name: Perform CodeQL analysis
         uses: github/codeql-action/analyze@v3
