--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: Custom DevSecOps Pipeline
+name: Pipeline DevSecOps
 
 on:
   push:
@@ -7,11 +7,9 @@ on:
     branches: [ main ]
 
 jobs:
-  
-  devsecops-scan:
+  seguridad-y-build:
     runs-on: ubuntu-latest
-    permissions:
-      security-events: write
+
     steps:
     - name: 📥 Clonar repositorio
       uses: actions/checkout@v3
@@ -27,14 +25,15 @@ jobs:
 
     - name: 🔍 Análisis de código con ESLint
       working-directory: ./backend
-      run: |
-        npm run lint || true
+      run: npm run lint || true
 
     - name: 🐳 Build de imagen Docker del backend
       run: docker build -t miapp-backend ./backend
 
     - name: 🛡️ Escaneo de imagen Docker con Trivy
-      run: docker run --rm -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy image miapp-backend || true
+      run: |
+        docker run --rm -v /var/run/docker.sock:/var/run/docker.sock \
+          aquasec/trivy image miapp-backend || true
 
     - name: 🔧 Instalar SonarScanner
       run: npm install -g sonar-scanner
