--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,7 @@
-# sonar-project.properties
 sonar.host.url=https://sonarcloud.io
-
-sonar.projectKey=Sylsk_miapp-segura
 sonar.organization=Sylsk
+sonar.projectKey=Sylsk_Taller3_Ciber
+sonar.branch.name=main
 
 sonar.projectName=MiApp Segura
 sonar.projectVersion=1.0
