--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.host.url=https://sonarcloud.io
-sonar.organization=Sylsk
+sonar.organization=sylsk
 sonar.projectKey=Sylsk_Taller3_Ciber
 sonar.branch.name=main
 
