Arreglar permiso de ESLint usando npx

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,7 +28,7 @@ jobs:
     - name: 🔍 Análisis de código con ESLint
       working-directory: ./backend
       run: |
-        npm run lint || true
+        npx eslint . || true
 
     - name: 🐳 Build de imagen Docker del backend
       run: docker build -t miapp-backend ./backend
