--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,28 +13,28 @@ jobs:
     permissions:
       security-events: write
     steps:
-    - name: 📥 Clonar repositorio
+    - name:  Clonar repositorio
       uses: actions/checkout@v3
 
-    - name: ⚙️ Configurar Node.js
+    - name:  Configurar Node.js
       uses: actions/setup-node@v3
       with:
         node-version: '18'
 
-    - name: 📦 Instalar dependencias del backend
+    - name:  Instalar dependencias del backend
       working-directory: ./backend
       run: npm install
 
-    - name: 🐳 Build de imagen Docker del backend
+    - name:  Build de imagen Docker del backend
       run: docker build -t miapp-backend ./backend
 
-    - name: 🛡️ Escaneo de imagen Docker con Trivy
+    - name:  Escaneo de imagen Docker con Trivy
       run: docker run --rm -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy image miapp-backend || true
 
-    - name: 🔧 Instalar SonarScanner
+    - name:  Instalar SonarScanner
       run: npm install -g sonar-scanner
 
-    - name: 📊 Análisis con SonarCloud
+    - name:  Análisis con SonarCloud
       run: sonar-scanner
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
